<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="55dip"
    android:orientation="horizontal"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/listGroup">

    <TextView
        android:id="@+id/child_item_text"
        app:layout_widthPercent="70%"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:textSize="17sp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:paddingLeft="?android:attr/expandableListPreferredChildPaddingLeft"
        android:textColor="@color/textitem"/>

    <Switch
        android:id="@+id/light_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight=".20"
        android:layout_centerVertical="true"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_toLeftOf="@+id/imageview"
        android:layout_toStartOf="@+id/imageview"
        android:checked="false"
        android:theme="@style/SwitchTheme" />

    <ImageView
        android:id="@+id/imageview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerInParent="true"
        android:src="@drawable/ic_action"
        />


</android.support.percent.PercentRelativeLayout>